Change Data button inside client-details page, to 'Progress Pictures'. Also refactor other functionalities